--- a/public/css/main.css
+++ b/public/css/main.css
@@ -216,16 +216,22 @@ a:visited {
   width: 800px;
   border: 1px solid black;
   background-color: white;
-  /*height: 800px;
-  overflow: scroll;*/
 }
 
 .posts_index {
-  display: block;
-  margin: 10px 80px;
-  padding: 15px;
+  /*display: block;*/
+  /*margin-left: 50p;*/
+  padding-left: 50px;
   text-align: justify;
-  width: 800px;
+  width: 25%;
+  float: left;
+}
+
+.current {
+  background-color: white;
+  /*width: 70%;*/
+  padding-right: 50px;
+  float: left;
 }
 
 .post_link {
