--- a/views/layout.erb
+++ b/views/layout.erb
@@ -24,9 +24,9 @@
         </li>
         <li><a href = "/blog">Musings</a></li>
       </ul></div>
-
     </div>
 
+    <%= erb @current if @current %>
     <%= yield %>
 
   </body>
