cleanup and reformatting

--- a/views/posts/week_01.erb
+++ b/views/posts/week_01.erb
@@ -1,8 +1,8 @@
 date: 2013-11-19
-title: "In which H learns about Big Data"
+title: "Xconomy Forum: Big Insight—Making Sense of Big Data in Seattle"
 
 <div class="posts">
-  <h1> Xconomy Forum: Big Insight—Making Sense of Big Data in Seattle </h1>
+  <h1>Xconomy Forum: Big Insight—Making Sense of Big Data in Seattle</h1><hr>
 
   <p> The term "data scientist" is one that has been tossed around with increasingly frequency in recent years. The only things I had really heard about data science was that it involved "processing data," and that I should consider it as a career option, so you can imagine that last Tuesday's conference provided some welcome illumination.</p>
 
