--- a/views/posts/week_02.erb
+++ b/views/posts/week_02.erb
@@ -2,7 +2,7 @@ date: 2013-11-05
 title: "In which H encounters Rubyists in the Wild"
 
 <div class="posts">
-  <h1>In which H goes to Seattle.rb</h1>
+  <h1>In which H encounters Rubyists in the Wild</h1><hr>
   <h2> It's a man's world </h2>
 
   <p> Tuesday night, ADA's first cohort attended the monthly Seattle.rb get-together at the Substantial offices. It was a place for Ruby developers in the area to get together and share what they're working on, get feedback, and network. </p>
