--- a/views/posts/week_04.erb
+++ b/views/posts/week_04.erb
@@ -2,8 +2,7 @@ date: 2013-11-24
 title: "In which H learns How the Internet Works"
 
 <div class="posts">
-  <h1>Get Up Offa That Thing</h1>
-  <h2>or, Release the Pressure</h2>
+  <h1>In which H learns How the Internet Works</h1><hr>
 
   <p>After last week's small but concrete triumphs, this week seemed to be a step backwards into the bewildering fog of computerly witchcraft. Though I did manage to survive it, this week was full of the sort of frustration that goes hand in hand with a kind of guilt that I am not putting in the right effort or energy into the way the material is being presented. We covered a fairly wide range of topics, and given the tenuous mastery most of us have in naviagating through this sea of unfamiliar knowledge, trying to fit all the new material into some frame of reference, or even trust that there was one, proved difficult.</p>
 
