--- a/views/posts/week_09.erb
+++ b/views/posts/week_09.erb
@@ -3,7 +3,7 @@ title: "In which things heard the first time are heard for the first time"
 
 <div class="posts">
 
-  <h1>In which H revisits week 3</h1>
+  <h1>In which things heard the first time are heard for the first time</h1><hr>
 
   <p>Once upon a time, a seemingly long, long time ago which turns out actually wasn't all that long ago, there was a project called Farmers' Market Finder, affectionately known as far_mar_finder.  It was the first real Ruby project that we'd had as newly-forged Adies, and I remember it fondly as the first time Ruby really started to click.  I felt pretty fancy learning all this code stuff, what with Manipulating Arrays and Sorting Hashes by Key Values and all manner of shiny things.  We were asked to write various class methods and instances methods and it was all a Rather Big Deal.</p>
 
@@ -25,10 +25,10 @@ title: "In which things heard the first time are heard for the first time"
 
   <h1>In which a laptop sticker finally makes sense</h1>
 
-  <p>When I got into ADA, a donor generously provided me with a used laptop to use for the program.  Like any good hipster laptop, it was adorned with various stickers, including one that read "I &#9829; APIs".  For the longest time, I felt like a fraud anytime I opened my computer around other programmers and displayed this sticker, because I had absolutely no clue what an API was.  More frustrasting still was, when I looked up what the acronym stood for (Application Programming Interface), I could understand each word individually, but still had no idea what it meant. 
+  <p>When I got into ADA, a donor generously provided me with a used laptop to use for the program.  Like any good hipster laptop, it was adorned with various stickers, including one that read "I &#9829; APIs".  For the longest time, I felt like a fraud anytime I opened my computer around other programmers and displayed this sticker, because I had absolutely no clue what an API was.  More frustrasting still was, when I looked up what the acronym stood for (Application Programming Interface), I could understand each word individually, but still had no idea what it meant.
   </p>
 
-  <p>Then, a friend of mine, who is also a Ruby developer, decided to give me a project to work on to help me understand what real coders do Out In The Wild.  "We need to convert the old API into a new one," he informed me.  I felt betrayed, exposed by my laptop sticker.  I decided it was time I figured out what an API meant.  
+  <p>Then, a friend of mine, who is also a Ruby developer, decided to give me a project to work on to help me understand what real coders do Out In The Wild.  "We need to convert the old API into a new one," he informed me.  I felt betrayed, exposed by my laptop sticker.  I decided it was time I figured out what an API meant.
   </p>
 
   <p>To aid in this, I decided to implement Ruby gems into my week 9 project (raindrops-on-roses.herokuapp.com) that called on various APIs (keep in mind at this point, I still had only the mossiest of ideas about what one was).  It helped to know that a few other Adies had used the Google Book API in their personal project over Christmas break.  After a lot of chatting with computer folks and implementing four gems that accessed various APIs, I finally have a mostly un-mossified idea of what an API is, what a gem is, and how to possibly write my own.  Not bad for just over two months.
