--- a/views/posts/week_11.erb
+++ b/views/posts/week_11.erb
@@ -2,20 +2,32 @@ date: 2014-01-26
 title: "In which H loses her keys, or, How Amazon almost ruined me, then saved me. Twice."
 
 <div class="posts">
-  <h1>Part 1: Figaro Fail</h1>
-  <p>A couple weeks ago, we were asked to do a small rails app called <a href="https://github.com/Ada-Developers-Academy/daily-curriculum/blob/master/week09/resources/media_ranker.md">Media Ranker</a> to solidify our understanding of an HTTP request cycle.  It was a fairly simple app and, as I had finished building the main components early on the week, I decided to get creative and implement a few API wrappers, which I talked about briefly in <a href="http://hhh-sinatra.herokuapp.com/blog/week_9">this</a> blog post. I initially shied away from the ones that required me to enter client keys and secret tokens, but decided it was something I needed to learn eventually and so I registered with Amazon Web Services, got my keys, and trusted the Figaro gem to keep them safely hidden.</p>
-  <p>Long story short, somehow Figaro did not keep the keys safely hidden.</p>
-  <p>I get an email soon after from Amazon, saying that my secret keys were visible on my public GitHub and I needed to address the issue immediately.  I asked an instructor to help translate some of the technical jargon in the email, and did what I thought I needed to do, which was to delete my GitHub repo entirely. Something in the back of my mind said there was still something else I needed to do, but what with the fast pace of ADA, I forgot about the affair.</p>
+  <h1>In which H loses her keys, or, How Amazon almost ruined me, then saved me. Twice.</h1><hr>
+  <h2>Part 1: Figaro Fail</h2>
 
-  <h1>Part 2: The bike commute marathon</h1>
-  <p>A couple weeks later, I arrive at school and as I'm about to lock my bike I realize my keys are missing. Realizing there was nothing else to do, I turn around and retrace my steps all the way back home, hoping that no one picked up the fairly conspicuous lanyard I keep my keys on. My commute from north of South Lake Union to downtown is a little under 7 miles.  I biked all the way home, then back to school again, arriving 2 hours late, with sore quads and no keys.</p>
+  <p>
+    A couple weeks ago, we were asked to do a small rails app called <a href="https://github.com/Ada-Developers-Academy/daily-curriculum/blob/master/week09/resources/media_ranker.md">Media Ranker</a> to solidify our understanding of an HTTP request cycle.  It was a fairly simple app and, as I had finished building the main components early on the week, I decided to get creative and implement a few API wrappers, which I talked about briefly in <a href="http://hhh-sinatra.herokuapp.com/blog/week_9">this</a> blog post. I initially shied away from the ones that required me to enter client keys and secret tokens, but decided it was something I needed to learn eventually and so I registered with Amazon Web Services, got my keys, and trusted the Figaro gem to keep them safely hidden.
+  </p>
+  <p>
+    Long story short, somehow Figaro did not keep the keys safely hidden.
+  </p>
+  <p>
+    I get an email soon after from Amazon, saying that my secret keys were visible on my public GitHub and I needed to address the issue immediately.  I asked an instructor to help translate some of the technical jargon in the email, and did what I thought I needed to do, which was to delete my GitHub repo entirely. Something in the back of my mind said there was still something else I needed to do, but what with the fast pace of ADA, I forgot about the affair.
+  </p>
 
-  <h1>Part 3: Amazon Fail</h1>
-  <p>The next morning, I am woken up by a call from India. It's Amazon again. Through the poor connection, unclear English, and fuzzy morning brain, I somehow am made to understand that there is still something wrong with my AWS account, and I needed to delete instances of something something. "But I deleted the repository," I say. After being fed some more confusing technical advice, I assure the guy that I'll log into my account and take a look that day.  I immediately fall back asleep.
+  <h2>Part 2: The bike commute marathon</h2>
+
+  <p>
+    A couple weeks later, I arrive at school and as I'm about to lock my bike I realize my keys are missing. Realizing there was nothing else to do, I turn around and retrace my steps all the way back home, hoping that no one picked up the fairly conspicuous lanyard I keep my keys on. My commute from north of South Lake Union to downtown is a little under 7 miles.  I biked all the way home, then back to school again, arriving 2 hours late, with sore quads and no keys.
   </p>
-  <p>Around lunch, prompted by yet another email reminder from Amazon, I remember to check my AWS console. The account is already suspended.  Not terribly surprising, given the nature of the warnings.  I check my account homepage, and see that I have an outstanding balance of over $4,300.
+
+  <h2>Part 3: Amazon Fail</h2>
+  <p>
+    The next morning, I am woken up by a call from India. It's Amazon again. Through the poor connection, unclear English, and fuzzy morning brain, I somehow am made to understand that there is still something wrong with my AWS account, and I needed to delete instances of something something. "But I deleted the repository," I say. After being fed some more confusing technical advice, I assure the guy that I'll log into my account and take a look that day.  I immediately fall back asleep.
   </p>
-  <h1>Part 4: </h1>
+  <p>
+    Around lunch, prompted by yet another email reminder from Amazon, I remember to check my AWS console. The account is already suspended.  Not terribly surprising, given the nature of the warnings.  I check my account homepage, and see that I have an outstanding balance of over $4,300.
+  </p>
+  <h2>Part 4: </h2>
   <p>To be continued!</p>
-
 </div>
