--- a/views/posts/week_12.erb
+++ b/views/posts/week_12.erb
@@ -1,8 +1,8 @@
 date: 2014-02-01
-title: "In which H deals with more keys"
+title: "Is it secret, is it safe?"
 
 <div class="posts">
-  <h1>Is it secret, is it safe?</h1>
+  <h1>Is it secret, is it safe?</h1><hr>
   <p>
     Our midterm <a href="https://github.com/Ada-Developers-Academy/daily-curriculum/blob/master/week12/see-more.md">project</a> involved using remote web APIs to build a feed aggregator.  We had to login using OAuth and make calls to the Twitter, Tumblr, and Instagram APIs and render posts from selected feeds onto our user homepage. Our group chose a Peep theme, for obvious reasons.</p>
     <div class ='peeps'><img src="http://dconheels.com/wp-content/uploads/2013/03/marshmallow_peeps.jpg" width= '500'></div>
