--- a/views/posts/week_15.erb
+++ b/views/posts/week_15.erb
@@ -2,7 +2,8 @@ date: 2014-03-07
 title: "H is for Hstore"
 
 <div class="posts">
-  <h1>Using Postgres, like, for Real</h1>
+  <h1>H is for Hstore</h1><hr>
+  <h2>Using Postgres, like, for Real</h2>
   <p>
     The vast majority of Rails apps we build are hosted on Heroku, which uses PostgreSQL to store database tables.  Since starting a new project by running <code>rails new</code> defaults to using SQLite3, the way kind of hacked around this problem was by simply using SQLite in development and testing, and postgreSQL in production, like so:
   </p>
@@ -139,8 +140,10 @@ title: "H is for Hstore"
 
 </pre>
     </div>
-<p>This allows you to simply call any of the keys as you would an attribute on the user object. Easy!</p>
+  <p>
+    This allows you to simply call any of the keys as you would an attribute on the user object. Easy!
   </p>
+  <hr>
   <h3>Further reading</h3>
   <ul>
     <li><a href="http://jes.al/2013/11/using-postgres-hstore-rails4/">Using Hstore in Rails 4</a></li>
