--- a/views/posts/week_18.erb
+++ b/views/posts/week_18.erb
@@ -2,7 +2,7 @@ date: 2014-03-14
 title: "Contributing to an Open Source Project, Part the First"
 
 <div class="posts">
-  <h1>In which an Adie ventures out of the nest</h1>
+  <h1>Contributing to an Open Source Project, Part the First</h1><hr>
   <p>
     Last Tuesday, the folks at Seattle.rb announced they had a few <a href='https://github.com/seattlerb/seattlerb.org/issues?labels=Help+Seattle.rb'>issues</a> with their <a href="seattlerb.org">website</a>, and invited those there to help resolve them as a way of giving back to the community.  Looking over the list, many of the issues seemed very similar to the tasks of a <a href='https://github.com/Ada-Developers-Academy/daily-curriculum/blob/master/week14/p_patch_planner.md'>recent project</a> we had done in class. Figuring that practice could only make <strike>perfect</strike> permament, I decided to have a go, and chose a relatively easy feature: showing past talks.  Having built plenty of index pages in Rails before, I figured I could hack it out pretty quickly.
   </p>
@@ -115,12 +115,12 @@ title: "Contributing to an Open Source Project, Part the First"
   <p>There. Not that magic, after all.</p>
 
   <div class="footnote">*almost. There are always those frustrating times when I forget the simplest, most obvious things like bundle or rake db:migrate and so forth.  I can only assume these lapses will get more infrequent with experience. But then again, maybe not.</div>
-
+<hr>
 <h3>Further reading</h3>
-<ul>
-<li><a href='http://bundler.io/v1.5/gemfile.html'>Bundling your Gemfile</a></li>
-<li><a href= 'https://devcenter.heroku.com/articles/ruby-versions'> What Heroku says about specifying Ruby versions</a></li>
-<li><a href="http://railsapps.github.io/managing-rails-versions-gems.html">Managing Rails versions and Gems</a></li>
-</ul>
+  <ul>
+    <li><a href='http://bundler.io/v1.5/gemfile.html'>Bundling your Gemfile</a></li>
+    <li><a href= 'https://devcenter.heroku.com/articles/ruby-versions'> What Heroku says about specifying Ruby versions</a></li>
+    <li><a href="http://railsapps.github.io/managing-rails-versions-gems.html">Managing Rails versions and Gems</a></li>
+  </ul>
 </div>
 
