--- a/views/blog.erb
+++ b/views/blog.erb
@@ -1,9 +1,8 @@
 <div class='blog_container'>
   <div class="posts_index">
     <% @sorted_posts.each do |post_path, metadata|%>
-      <h3 class="post_date"><%= metadata["date"].strftime("%B %d, %Y:") %></h3>
-      <a class="post_link" href="/blog/<%= post_path %>"> <%= metadata["title"] %></a>
-      <br>
+      <h4><a class="post_link" href="/blog/<%= post_path %>"> <%= metadata["title"] %></a>
+      <span class="post_date"><%= metadata["date"].strftime("%B %d, %Y") %></span></h4>
     <% end %>
   </div>
 </div>
