--- a/views/about.erb
+++ b/views/about.erb
@@ -1,12 +1,12 @@
   <div class='about_container'>
-    <div class= 'bio_box'>    
+    <div class= 'bio_box'>
       <img id='profile' src="/img/rainbowumbrella.jpg" >
     </div>
-    <div class= 'bio_box'> 
+    <div class= 'bio_box'>
       <h2>brought to you by the letter H</h2>
-      <p> 
-        Hsing-Hui is a Texas-born Taiwanese-American Dutch-speaking francophile who, at any given moment in her life, found herself where she was mostly by accident.  She has chased frisbees and adventures in twenty-four different countries across four continents, dabbled in teaching, translation, and coaching before deciding to becoming a web developer.  Her first experience with coding was through <a href="http://projecteuler.net">Project Euler</a>, where, enraged that she could not solve the problems without any knowledge of programming whatsoever, she concluded that she must not have been meant for the field. She is currently a member of the first cohort of Ada Developers Academy, which she likes very much.  She also once owned a cat. 
-      </p> 
+      <p>
+        Hsing-Hui is a Texas-born Taiwanese-American Dutch-speaking francophile who, at any given moment in her life, found herself where she was mostly by accident.  She has chased frisbees and adventures in twenty-four different countries across four continents, dabbled in teaching, translation, and coaching before deciding to becoming a web developer.  Her first experience with coding was through <a href="http://projecteuler.net">Project Euler</a>, where, enraged that she could not solve the problems without any knowledge of programming whatsoever, she concluded that she must not have been meant for the field. She is currently a member of the first cohort of Ada Developers Academy, which she likes very much.
+      </p>
     </div>
-    
+
   </div> <!-- end container -->
