--- a/views/layout.erb
+++ b/views/layout.erb
@@ -16,11 +16,11 @@
 
       <div><ul class='navigation'>
         <li><a href= "/about"> About</a></li>
-        <li>Portfolio
-          <ul class="portfolio_menu">
+        <li><a href= "/projects">Projects</a>
+          <!-- <ul class="portfolio_menu">
             <li> <a href= "/portfolio">The Utopia Within</a></li>
             <li> <a href="/portfolio/dinosaurs">Dinosaurs</a></li>
-          </ul>
+          </ul> -->
         </li>
         <li><a href = "/blog">Musings</a></li>
       </ul></div>
