--- a/views/posts/week_11.erb
+++ b/views/posts/week_11.erb
@@ -1,8 +1,9 @@
 date: 2014-01-26
-title: "In which H loses her keys, or, How Amazon almost ruined me, then saved me. Twice."
+title: "In which H loses her keys"
 
 <div class="posts">
-  <h1>In which H loses her keys, or, How Amazon almost ruined me, then saved me. Twice.</h1><hr>
+  <h1>In which H loses her keys</h1>
+  <h2>or, How Amazon almost ruined me, then saved me. Twice.</h2><hr>
   <h2>Part 1: Figaro Fail</h2>
 
   <p>
