--- a/views/layout.erb
+++ b/views/layout.erb
@@ -14,16 +14,13 @@
         <h1> Hsing-Hui Hsu </h1>
       </div>
 
-      <div><ul class='navigation'>
-        <li><a href= "/about"> About</a></li>
-        <li><a href= "/projects">Projects</a>
-          <!-- <ul class="portfolio_menu">
-            <li> <a href= "/portfolio">The Utopia Within</a></li>
-            <li> <a href="/portfolio/dinosaurs">Dinosaurs</a></li>
-          </ul> -->
-        </li>
-        <li><a href = "/blog">Musings</a></li>
-      </ul></div>
+      <div>
+        <ul class='navigation'>
+          <li><a href= "/about"> About</a></li>
+          <li><a href= "/projects">Projects</a></li>
+          <li><a href = "/blog">Blog</a></li>
+        </ul>
+      </div>
     </div>
 
     <%= erb @current if @current %>
