--- a/views/layout.erb
+++ b/views/layout.erb
@@ -17,7 +17,7 @@
       <div>
         <ul class='navigation'>
           <li><a href= "/about"> About</a></li>
-          <li><a href= "/projects">Projects</a></li>
+          <li><a href= "/portfolio">Fuzzy Creatures</a></li>
           <li><a href = "/blog">Blog</a></li>
         </ul>
       </div>
