--- a/views/posts/explore.erb
+++ b/views/posts/explore.erb
@@ -7,7 +7,7 @@ title: "Ruby v. Python"
     This week, we were given free rein to explore side projects and interests.  Since many of the ADA sponsoring companies use Python, I figured it was a good opportunity to see what it was all about.
   </p>
   <p>
-    Fortunately, I had had already gotten my feet a tiny bit wet in Python before ADA started, but now that I feel more comfortable in Ruby, picking up Python was even easier than I remembered.  Since <a href='http://projecteuler.net/'>Project Euler</a> proved to be so helpful in getting my Ruby legs, I decided to revisit the problems aboard Python. You can see my attempts on my <a href= 'https://github.com/Elffers/Project_Euler'>GitHub</a>, but I wanted to compare the two languages a bit here.
+    Fortunately, I had had already gotten my feet a tiny bit wet in Python before ADA started, but now that I feel more comfortable in Ruby, picking up Python was even easier than I remembered. Since <a href='http://projecteuler.net/'>Project Euler</a> proved to be so helpful in getting my Ruby legs, I decided to revisit the problems aboard Python. You can see my attempts on my <a href= 'https://github.com/Elffers/Project_Euler'>GitHub</a>, but I wanted to compare the two languages a bit here.
   </p>
 
   <h2>Truthiness</h2>
@@ -110,10 +110,18 @@ def factors_of_n(x):
     <span style="color:#e1efff">]</span>
     <span style="color:#ff9d00">return</span> factors
 </pre>
+
+<p>
+  In a <a href='http://hhh-sinatra.herokuapp.com/blog/week_14'>previous post</a>, I talked about a coding exercise intended to better understand how interpreted languages worked.  My mentor originally wanted me to use Python, but I'd written it in Ruby first. But now with my shiny new Python skills, <a href='https://github.com/Elffers/interpreted-language/blob/master/anaconda.py'>here it is again, in Python</a>!
+</p>
 <h3>Further reading</h3>
   <ul>
-    <li><a href="https://wiki.python.org/moin/Generators">Python Generators</a></li>
+    <li>
+      <a href="https://wiki.python.org/moin/Generators" alt='wiki'>Python Generators</a></li>
     <li>
       <a href='http://python-history.blogspot.com/2010/06/from-list-comprehensions-to-generator.html'>Real blog post about generators, by a real programmer</a>
+    </li>
+    <li>
+      <a href='http://python.net/~goodger/projects/pycon/2007/idiomatic/handout.html'>Idiomatic Python by David Goodger</a>
     </li>
 </div>
