--- a/views/posts/week_19.erb
+++ b/views/posts/week_19.erb
@@ -12,17 +12,26 @@ title: "Contributing to an Open Source Project, Part the Second"
       </li>
       <li><strong>Proofread, proofread, proofread.</strong> For many of the projects we've built in ADA, it's easy to be careless or undisciplined about code style. However, even careless comments or vestiges of abandoned code can be confusing, and add to code noise. I ended up refactoring my pull request over and over again, and it not only made my code better and smarter, it actually was kind of <a href='http://kytrinyx.com/talks/therapeutic-refactoring'>therapeutic</a>.
       </li>
-      <li><strong>Thicken your skin.</strong> Because here's the sad truth: my first experience contributing to open source, to put it bluntly, sucked. I spent hours working on the project in my non-existent spare time, even staying until almost 11pm in the office one night, and ultimately it was rejected. And while I was prepared to handle rejection, I was not prepared for the manner in which it was rejected. To be fair, much of the feedback I got on my PR was helpful and made me grow up a lot as a coder. However, there was also feedback that came across as quite condescending, and made me feel incredibly unwelcome.
+      <li><strong>Thicken your skin.</strong> Because here's the sad truth: my first experience contributing to open source, to put it bluntly, sucked. <em>[Warning: The following may contain Feelings]</em> I spent a significant number of hours working on the project in my non-existent spare time, once even staying until almost 11pm in the office, and ultimately it was rejected. And while I was prepared to handle rejection, I was not prepared for the manner in which it was rejected. To be fair, much of the feedback I got on my PR was helpful and made me grow up a lot as a coder. However, there was also feedback that came across as quite condescending, and made me feel incredibly unwelcome.
       </li>
     </ol>
   </p>
   <p>
-    My background was, like the rest of the ADA cohort, not computer science, or anything tech-related. I majored in the fine arts, and transitioning from that culture to a tech one has certainly yielded some interesting comparisons.  In both, there is a certain aestheticism that high quality work strives towards.
+    My background was, like the rest of the ADA cohort, not computer science, or anything tech-related. I majored in the fine arts, where the mindset of creating high quality work is markedly different from that of skilled programmers.  Not that there aren't similarities--there is certainly an aesthetic that exists in the psychological landscape of both artists and programmers. But the main difference is that oftentimes, an integral part of what makes great art is that it somehow reflects human civility, and grace. And that is the part I miss the most now that I'm in the tech world. I was recently asked the following:
+  </p>
+
+  <p><cite>
+    One thing that interests me is the notion of making programming accessible to non-programmers. I'm not talking about ... ways to make it a little easier to learn. Rather, what would "programming" look like if it wasn't always invented and furthered by programmers? Could it look like poetry? Could it feel like firing a clay pot?
+  </cite></p>
+
+  <p>
+    Many artists speak of putting themselves into their work, embuing their music or painting or dance with their better selves.
   </p>
   <h3>Further reading</h3>
   <ul>
     <li><a href='https://github.com/bbatsov/ruby-style-guide'>Ruby Style Guide</a></li>
     <li><a href='http://lostechies.com/derickbailey/2012/12/14/dear-open-source-project-leader-quit-being-a-jerk/'>Derick Bailey is Nice, and So We Should Be Nice</a></li>
     <li><a href='http://blog.valerieaurora.org/2011/05/20/on-the-necessity-of-assholes/'>Valerie Aurora on the Necessity of A**holes</a></li>
+    <li><a href='http://www.paulgraham.com/hp.html'>Paul Graham on Hackers and Painters</a></li>
 
 </div>
