edit interview paragraph

--- a/views/posts/week_20.erb
+++ b/views/posts/week_20.erb
@@ -36,7 +36,7 @@ title: "In which H experiences her first Technical Interview Question"
 </pre>
   </p>
   <p>
-    A little messy, but I was a bit nervous, especially as we weren't expecting an actual technical question at all. Mostly, I was afraid that I would be docked (figuratively) for having so many loops.  Since my interview was cut short due to a scheduling misunderstanding, I didn't have time to explain how I would refactor this solution to utilize a set or hash to optimize efficiency.  So, when I got home I figured I'd try to clean up my solution a bit.
+    A little messy, but I was running on nervous first-interview adrenaline. Mostly, I was afraid that I would be docked (figuratively) for having so many loops, and worse still, a nested loop. Since my interview was only 10 minutes long, I didn't have time to explain how I would refactor this solution to utilize a set or hash to optimize efficiency.  So when I got home, I figured I'd try to clean up my solution a bit.
   </p>
   <p>
     Another major problem, aside from inefficiency, is that there is a nil value returned as the complement of an element in the array that equals the sum itself. For example, the above code returns:
