--- a/views/posts/week_19.erb
+++ b/views/posts/week_19.erb
@@ -4,7 +4,8 @@ title: "Contributing to an Open Source Project, Part the Second"
 <div class="posts">
   <h1>Contributing to an Open Source Project, Part the Second</h1><hr>
   <p>
-    A few things I learned about contributing to open source:
+    Coming soon!
+    <!-- A few things I learned about contributing to open source:
     <ol>
       <li><strong>Commit early and often.</strong> Too often when coding, I find myself so much in the zone that by the time I've realized I hadn't made any commits yet I've changed a bunch of different unrelated issues across multiple files.   However, having clearly organized steps to trace back changes makes it easier for other humans to review.
       </li>
@@ -32,6 +33,6 @@ title: "Contributing to an Open Source Project, Part the Second"
     <li><a href='https://github.com/bbatsov/ruby-style-guide'>Ruby Style Guide</a></li>
     <li><a href='http://lostechies.com/derickbailey/2012/12/14/dear-open-source-project-leader-quit-being-a-jerk/'>Derick Bailey is Nice, and So We Should Be Nice</a></li>
     <li><a href='http://blog.valerieaurora.org/2011/05/20/on-the-necessity-of-assholes/'>Valerie Aurora on the Necessity of A**holes</a></li>
-    <li><a href='http://www.paulgraham.com/hp.html'>Paul Graham on Hackers and Painters</a></li>
+    <li><a href='http://www.paulgraham.com/hp.html'>Paul Graham on Hackers and Painters</a></li> -->
 
 </div>
