--- a/views/posts/week_20.erb
+++ b/views/posts/week_20.erb
@@ -86,7 +86,7 @@ end -->
 </pre>
   </p>
   <p>
-    In spite of the sheer surprise of being given a technical question and the abbreviated interview time, I actually found the problem kind of fun.  I'd be curious to see what other kinds of problems are given at interviews.
+    One bug is that since the array is stuck into a set, any repetitions are eliminated, for example, if the array contained the number 5 twice, the returned hash would not contain {5 => 5}. In spite of the sheer surprise of being given a technical question and the abbreviated interview time, I actually found the problem kind of fun.  I'd be curious to see what other kinds of problems are given at interviews.
   </p>
 
 </div>
